Se hicieron modificaciones

--- a/index (2).html
+++ b/index (2).html
@@ -14,7 +14,7 @@
   <section class="content">
     <aside> 
         Facebook helps you connect and share with the people in your life.
-        <img src="fb.PNG">
+        <img src="Facebook.PNG">
     </aside>
     
     <main> Sign Up
